# wiki_team

./: .gitignore  README.md  pyproject.toml
dags/: README.md  heejin_convert_txt_to_parquet.py  hyun_dag.py  jacob_wiki_cleanse.py  jacob_wiki_outlier.py  jacob_wiki_save.py  jiwon_wiki_proc.py  jiwon_wiki_traffic.py
members/heejin/: hj_dags.py  run.sh  save.py
members/hyun/: make_wiki.py  run.sh
members/jacob/: README.md
members/jacob/outlier/: .run.sh.swp  run.sh  wiki_outlier.py
members/jacob/outlier/outlier_cleanse/: cleanse.py  run.sh
members/jacob/test/: gcptest.py  run.sh  test_parquet.py  test_save_parquet.py
members/jiwon/wiki_proc/: processing.py  run.sh
members/jiwon/wiki_traffic/: processing.py  run.sh
